# sigma-ls

./: .gitignore  Contributing.md  README.md  Security.md  main.py  pyproject.toml  requirements.txt  run_tests.py  server.py
.github/workflows/: ci.yml
docs/: about.md  api.md  features.md  setup.md
features/: codeActions.py  completions.py  diagnostics.py  document_symbols.py  formatter.py  hover.py  initialize.py  mitre_attack.json  mitre_fetcher.py  structured_yaml_formatter.py
lsp_server/: server.py
neovim/telescope-picker/: sigma_picker.lua
tests/: test_completions.py  test_formatter.py  test_server.py
