[tool.poetry]
name = "sigma-ls"
version = "0.5.0"
description = "language server for sigma rules"
authors = ["pop-ecx <oliver.mulwa@protonmail.com>"]
license = "Apache 2.0"
readme = "README.md"
packages = [{include = "sigma_ls"}]

[tool.poetry.dependencies]
python = "^3.11"
pygls = "^1.3.1"
lsprotocol = "^2023.0.1"
"ruamel.yaml" = "^0.18.6"
jsonschema = "^4.23.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
